--- a/style.css
+++ b/style.css
@@ -153,9 +153,10 @@
     width: 90%;
     height: 90%;
     overflow-y: scroll;
-    display: ;
+    display: none;
     padding: 2rem 0;
   }
+  
 
   .meal-details::-webkit-scrollbar {
     width: 10px;
@@ -172,6 +173,10 @@
 
   .meal-details-content {
     margin: 2rem;
+  }
+
+  .meal-details-content p:not(.recipe-category) {
+    padding: 1rem 0;
   }
 
   .recipe-close-btn{
@@ -231,6 +236,14 @@
     opacity: 0.8;
   }
 
+  .notFound {
+    grid-template-columns: 1fr!important;
+    color: var(--tenne-tawny);
+    font-size: 1.8rem;
+    font-weight: 600;
+    width: 100%;
+  }
+
   @media screen and (min-width: 600px) {
     .meal-search-box {
         width: 540px;
@@ -249,6 +262,11 @@
     .meal-item{
         margin: 0;
     }
+
+    .meal-details{
+      width: 700px;
+    }
+
   }
 
   @media screen and (min-width: 992px) {
